[package]
name = "mcp-tap"
version = "1.0.0"
edition = "2021"
description = "Unified MCP CLI - Generic MCP Protocol Client"
authors = ["Yoshifumi Nakahira (yonaka15)"]
license = "MIT"
repository = "https://github.com/yonaka15/mcp-tap"
keywords = ["mcp", "cli", "model-context-protocol"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
nix = { version = "0.30.1", features = ["process", "signal", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
