[package]
name = "mcp-valve"
version = "1.1.0"
edition = "2021"
description = "Unified MCP CLI - Generic MCP Protocol Client"
authors = ["Yoshifumi Nakahira (yonaka15)"]
license = "MIT"
repository = "https://github.com/yonaka15/mcp-valve"
readme = "README.md"
keywords = ["mcp", "cli", "mcp-client", "json-rpc"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["process", "signal", "fs"] }
